# electrosim

./: .gitignore  LICENSE.md  README.md  pyproject.toml
elec/: electrosim.py
