[tool.poetry]
name = "Electro Sim"
version = "0.1.0"
description = ""
authors = ["Shaun Beautement <sf.beautement@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
raylib-py = "^4.5.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
